# NUSBuddy

./: .env.sample  README.md  docker-compose.yml  requirements.txt
bot/: Cargo.toml
bot/src/: main.rs
db/: init.sql
src/: database.py  gpt.py  handlers.py  telebot.py  test.py
src/prompts/: conversation.txt  create_deadline.txt  create_reminder.txt  extract_deadline_description.txt  extract_delete_ids.txt  extract_delete_reminder.txt  extract_fetch_info.txt  extract_update_description.txt  extract_update_info.txt  extract_update_reminder.txt  fetch_deadline.txt  filter_deadlines.txt  intention.txt  response.txt
